5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4063/executions/1602_1015.log
== TEST (2019-03-27 18:50:05) 
-- CODE:
n1= int(input("primeiro numero: "))
n2= int(input("segundo numero: "))
n3= int(input("terceiro numero: "))
min(a,b,c)
max(a,b,c)
if maior < n2
   maior = n2
if maior < n3
   maior = n3
if menor > n2
   menor = n2
if menor > n3
   menor = n3
print ("maior: %d " %maior)
print ("menor: %d " %menor)
-- ERROR:
File "XXXX", line 6
    if maior < n2
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:50:08) 
-- CODE:
n1= int(input("primeiro numero: "))
n2= int(input("segundo numero: "))
n3= int(input("terceiro numero: "))
min(a,b,c)
max(a,b,c)
if maior < n2
   maior = n2
if maior < n3
   maior = n3
if menor > n2
   menor = n2
if menor > n3
   menor = n3
print ("maior: %d " %maior)
print ("menor: %d " %menor)
-- EXECUTION TIME:
0.156796
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 6
    if maior < n2
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:50:09) 
-- CODE:
n1= int(input("primeiro numero: "))
n2= int(input("segundo numero: "))
n3= int(input("terceiro numero: "))
min(a,b,c)
max(a,b,c)
if maior < n2
   maior = n2
if maior < n3
   maior = n3
if menor > n2
   menor = n2
if menor > n3
   menor = n3
print ("maior: %d " %maior)
print ("menor: %d " %menor)
-- ERROR:
File "XXXX", line 6
    if maior < n2
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:54:06) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
print(min(a,b,c))
print(a+b+c-max(a,b,c)-min(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.144548
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
